--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.5"
+    "@next/mdx": "^15.1.5",
+    "@tailwindcss/postcss": "^0.0.0-development.1",
+    "@vercel/analytics": "^1.4.1",
+    "autoprefixer": "^10.4.20",
+    "next": "15.1.5",
+    "next-view-transitions": "^0.3.4",
+    "postgres": "^3.4.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sugar-high": "^0.8.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5"
   }
 }
