--- a/package.json
+++ b/package.json
@@ -2,29 +2,29 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build --turbopack",
     "start": "next start",
     "delete": "rm -rf app/n"
   },
   "dependencies": {
-    "@next/mdx": "15.2.0",
-    "@tailwindcss/postcss": "^4.0.8",
+    "@next/mdx": "15.3.1",
+    "@tailwindcss/postcss": "^4.1.4",
     "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.5.0",
-    "framer-motion": "^12.4.7",
-    "next": "15.2.3",
+    "framer-motion": "^12.9.2",
+    "next": "15.3.1",
     "next-view-transitions": "^0.3.4",
     "postgres": "^3.4.5",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "sugar-high": "^0.9.3"
   },
   "devDependencies": {
-    "@types/node": "^22.13.8",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/node": "^22.15.2",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.9",
-    "typescript": "^5.8.2"
+    "tailwindcss": "^4.1.4",
+    "typescript": "^5.8.3"
   }
 }
